feat: add new `hide file extension` for hiding file extension in workspace, recent file list and opened file tab. improvement: change the `show hidden file` option doesn't need to reload folder anymore.